// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stock quotes http transport should return error for invalid payload 1`] = `
{
  "errorMessage": "Data provider API did not provide valid data for {"base":"MSFT"}",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;

exports[`stock quotes http transport should return success 1`] = `
{
  "data": {
    "ask_price": 26.32,
    "ask_volume": 13,
    "bid_price": 25.8,
    "bid_volume": 1,
    "mid_price": 26.06,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
    "providerIndicatedTimeUnixMs": 1628899200621,
  },
}
`;

exports[`stock quotes websocket transport missing a and b fields should fallback 1`] = `
{
  "data": {
    "ask_price": 10,
    "ask_volume": 11,
    "bid_price": 12,
    "bid_volume": 13,
    "mid_price": 11,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataStreamEstablishedUnixMs": 1641035471111,
    "providerIndicatedTimeUnixMs": 14,
  },
}
`;

exports[`stock quotes websocket transport should return ask when bid is 0 1`] = `
{
  "data": {
    "ask_price": 5,
    "ask_volume": 6,
    "bid_price": 0,
    "bid_volume": 8,
    "mid_price": 5,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataStreamEstablishedUnixMs": 1641035471111,
    "providerIndicatedTimeUnixMs": 7,
  },
}
`;

exports[`stock quotes websocket transport should return bid when ask is 0 1`] = `
{
  "data": {
    "ask_price": 0,
    "ask_volume": 6,
    "bid_price": 7,
    "bid_volume": 8,
    "mid_price": 7,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataStreamEstablishedUnixMs": 1641035471111,
    "providerIndicatedTimeUnixMs": 5,
  },
}
`;

exports[`stock quotes websocket transport should return success 1`] = `
{
  "data": {
    "ask_price": 5,
    "ask_volume": 6,
    "bid_price": 7,
    "bid_volume": 8,
    "mid_price": 6,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataStreamEstablishedUnixMs": 1641035471111,
    "providerIndicatedTimeUnixMs": 9,
  },
}
`;

exports[`stock quotes websocket transport should return success for number messages 1`] = `
{
  "data": {
    "ask_price": 5,
    "ask_volume": 6,
    "bid_price": 7,
    "bid_volume": 8,
    "mid_price": 6,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataStreamEstablishedUnixMs": 1641035471111,
    "providerIndicatedTimeUnixMs": 9,
  },
}
`;
